...
        when {
          title.isEmpty() -> context.getString(R.string.title_empty)
          title.length > maxTitleSize -> context.getString(R.string.title_too_long)
          else -> null
        }
      },
      testTag = "inputTitleCreate",
      errorTestTag = "TitleErrorText")
  Spacer(modifier = Modifier.height(STANDARD_PADDING.dp))
  // Description section with the remaining characters
  RemainingPlace(description, maxDescriptionSize)
  TextFieldWithErrorState(
      value = description,
...
          description.isEmpty() -> context.getString(R.string.description_empty)
          description.length > maxDescriptionSize ->
              context.getString(R.string.description_too_long)
          else -> null
        }
      },
      testTag = "inputDescriptionCreate",
      errorTestTag = "DescriptionErrorText")

  if (dateIsOpen) {
    // Date picker displayed iff clicked on the button
    MyDatePicker(
        onCloseRequest = onCloseDate,
...
          price.isEmpty() -> context.getString(R.string.price_empty)
          price.toDoubleOrNull() == null -> context.getString(R.string.price_nan)
          price.toDouble() < 0 -> context.getString(R.string.price_neg)
          else -> null
        }
      },
      testTag = "inputPriceCreate",
      errorTestTag = "PriceErrorText")
  Spacer(modifier = Modifier.height(STANDARD_PADDING.dp))
  TextFieldWithErrorState(
      value = placesMax,
      onValueChange = onPlacesMaxChange,
      label = stringResource(id = R.string.request_placesMax_activity),
...
          placesMax.isEmpty() -> context.getString(R.string.places_empty)
          placesMax.toIntOrNull() == null -> context.getString(R.string.places_nan)
          placesMax.toInt() <= 0 -> context.getString(R.string.places_neg)
          else -> null
        }
      },
      testTag = "inputPlacesCreate",
      errorTestTag = "PlacesErrorText")
  Spacer(modifier = Modifier.height(STANDARD_PADDING.dp))
  Box {
    TextFieldWithErrorState(
        value = locationQuery,
        onValueChange = onLocationQueryChange,
...
        validation = { locationQuery ->
          when {
            locationQuery.isEmpty() -> context.getString(R.string.location_empty)
            else -> null
          }
        },
        testTag = "inputLocationCreate",
        errorTestTag = "LocationErrorText")

    // Dropdown menu for location suggestions
    DropdownMenu(
        expanded = showDropdown && locationSuggestions.isNotEmpty(),
        onDismissRequest = onDismissLocation,
...
        ) {
          TextButton(
              onClick = onOpenUserDialog,
              modifier =
                  Modifier.width((BUTTON_WIDTH / 1.5).dp)
                      .height(BUTTON_HEIGHT_SM.dp)
                      .testTag("addAttendeeButton"),
              shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT),
              colors =
                  ButtonColors(
                      containerColor = Color(MAIN_COLOR_DARK),
                      contentColor = Color.White,
                      disabledContentColor = Color.Gray,
...
        onAddUser = onAddUser,
    )
  }
  // Button to display the date picker
  TextButton(
      onClick = onClickDate,
      modifier = Modifier.fillMaxWidth().padding(STANDARD_PADDING.dp).testTag("inputDateCreate"),
      colors =
          ButtonColors(
              containerColor = Color.Transparent,
              contentColor = Color(MAIN_COLOR_DARK),
              disabledContentColor = Color.Gray,
              disabledContainerColor = Color.Gray)) {
...
                    "${dueDate.toDate().year + 1900}  (click to change)")
        else Text("Select Date for the activity")
      }
  // Button to display the start time picker
  TextButton(
      onClick = onClickStartingTime,
      modifier = Modifier.fillMaxWidth().testTag("inputStartTimeCreate"),
      colors =
          ButtonColors(
              containerColor = Color.Transparent,
              contentColor = Color(MAIN_COLOR_DARK),
              disabledContentColor = Color.Gray,
              disabledContainerColor = Color.Gray)) {
...
        else Text("Select start time")
      }

  // Button to display the duration time picker
  TextButton(
      onClick = onClickDurationTime,
      modifier = Modifier.fillMaxWidth().testTag("inputEndTimeCreate"),
      colors =
          ButtonColors(
              containerColor = Color.Transparent,
              contentColor = Color(MAIN_COLOR_DARK),
              disabledContentColor = Color.Gray,
              disabledContainerColor = Color.Gray)) {
...
) {
  ExposedDropdownMenuBox(
      // Set the test tag based on the mode
      modifier =
          Modifier.testTag(
                  when (mode) {
                    "category" -> "chooseCategoryMenu"
                    "type" -> "chooseTypeMenu"
                    else -> "chooseInterestMenu"
                  })
              .fillMaxWidth()
              .padding(STANDARD_PADDING.dp),
      expanded = expanded,
      onExpandedChange = onExpandChange) {
...
                else -> {}
              }
            },
            icon = { ExposedDropdownMenuDefaults.TrailingIcon(expanded = expanded) },
            testTag =
                when (mode) {
                  "category" -> "categoryTextField"
                  "type" -> "typeTextField"
                  "interest" -> "interestTextField"
                  else -> ""
                },
            modifier =
                Modifier.menuAnchor().fillMaxWidth().background(Color(MAIN_BACKGROUND_BUTTON)),
...
