...
      topBar = {
        TopAppBar(
            title = { Text("Edit the activity", color = Color.White) },
            navigationIcon = {
              IconButton(
                  onClick = { navigationActions.goBack() },
                  modifier = Modifier.testTag("goBackButton")) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Outlined.ArrowBack,
                        contentDescription = "Back")
                  }
            },
            colors =
...
          Column(
              modifier =
                  Modifier.padding(paddingValues)
                      .fillMaxSize()
                      .background(color = Color(0xFFFFFFFF))
                      .verticalScroll(rememberScrollState())
                      .testTag("activityEditScreen"),
          ) {
            if (showDialogImage) {
              AddImageDialog(
                  onDismiss = { showDialogImage = false },
                  onGalleryClick = {
                    showDialogImage = false
...
                },
                modifier =
                    Modifier.width(BUTTON_WIDTH.dp)
                        .background(Color.Transparent)
                        .height(BUTTON_HEIGHT_SM.dp)
                        .align(Alignment.CenterHorizontally)
                        .testTag("editButton"),
                shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
                colors =
                    ButtonColors(
                        containerColor = Color(MAIN_COLOR_DARK),
                        contentColor = Color.White,
                        disabledContentColor = Color.Gray,
...
