...
              onCloseRequest(dialogState)
            }
      },
      backgroundColor = Color(MAIN_BACKGROUND_BUTTON)) {
        datepicker(
            initialDate = initialDate ?: LocalDate.now(),
            title = "Select a date",
            allowedDateValidator = { date -> date.isAfter(LocalDate.now().minusDays(1)) },
            colors =
                DatePickerDefaults.colors(
                    headerBackgroundColor = Color(MAIN_COLOR_DARK),
                    headerTextColor = Color.White,
                    calendarHeaderTextColor = Color(MAIN_COLOR_DARK),
...
